# flashcard

./: .gitignore  Cargo.toml  ChangeLog  Makefile.am  Makefile~  README.md  README.zh-cn.md  README.zh-tw.md  aclocal.m4  config.h.in  config.hpp  config.toml  config.yaml  configure.ac  gojuon-hiragana.yaml  main.cpp  random.cpp
m4/: ChangeLog
src/: Makefile.am  Makefile.in  config.cpp  config.hpp  main.cpp  main.rs  random.cpp  random.hpp
src/.deps/: flashcard-main.Po  flashcard-random.Po  random.Po
src/include/: config.hpp  random.hpp
